// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayBox rendering Empty mode matches snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`DayBox rendering Normal mode matches snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    7
  </Text>
</TouchableOpacity>
`;
